2002-08-15  Alan Modra  <amodra@bigpond.net.au>

	* readelf.c: Include elf/i370.h.
	(dump_relocations): Handle EM_S370.
	(dynamic_segment_parisc_val): Print \n.
	(process_dynamic_segment <DT_BIND_NOW>): Here too.

2002-08-14  Nick Clifton  <nickc@redhat.com>

	* nm.c (usage): Change 'gnu-new-abi' to 'gnu-v3'.
	* objdump.c (usage): Likewise.
	* doc/binutils.texi: Likewise.

2002-08-14  Luke Dunstan  <infidel@users.sourceforge.net>

	* rcparse.y (acc_entry): Don't warn about ALT use with
	non-VIRTKEY.

2002-08-13  H.J. Lu <hjl@gnu.org>

	* objcopy.c (copy_object): Don't warn about the unsupported
	architecture unless the input target is defaulted or the
	output architecture is different from the input.

2002-08-09  Nick Clifton  <nickc@redhat.com>

	* po/sv.po: Updated Swedish translation.

2002-08-05  Alan Modra  <amodra@bigpond.net.au>

	* prdbg.c (pr_fix_visibility): Remove assert.

2002-07-31  Nick Clifton  <nickc@redhat.com>

	* addr2line.c (process_file): Rename parameter 'filename' to
	'file_name' in order to avoid shadowing global symbol of the
	same name.
	(main): Likewise.

2002-07-30  Jakub Jelinek  <jakub@redhat.com>

	* readelf.c (OPTION_DEBUG_DUMP): Define.
	(options): Use it.
	(usage): Update help.
	(parse_args): Handle --debug-dump separately from -w.
	* doc/binutils.texi (readelf): Update documentation.

2002-07-25  Nick Clifton  <nickc@redhat.com>

	* po/es.po: Updated Spanish translation.
	* po/fr.po: Updated French translation.

2002-07-24  Nick Clifton  <nickc@redhat.com>
	
	* po/es.po: Updated Spanish translation.

2002-07-23  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.

2002-07-23  Nick Clifton  <nickc@redhat.com>

	* po/fr.po: Updated French translation.

2002-07-23  Eric S. Raymond  <esr@golux.thyrsus.com>

	* doc/binutils.texi (addr2line <man synopsis>): Correct brackets.

2002-07-20  Alan Modra  <amodra@bigpond.net.au>

	* budemang.c: Include config.h and string.h/strings.h.
